# odrl-rs

./: Cargo.toml  README.md  rustfmt.toml
crates/odrl/: Cargo.toml
